# dpcpp-workshop

exercises/: README.md
exercises/Exercise1_Using_the_CUDA_Backend/: CMakeLists.txt  README.md  solution.cpp  source.cpp
exercises/Exercise2_Using_CUBLAS_in_SYCL/: CMakeLists.txt  README.md  solution.cpp  source.cpp
exercises/Exercise3_Calling_CUDA_kernels_in_SYCL/: Makefile  README.md  solution.cu  source.cu
exercises/Exercise4_Porting_CUDA_to_SYCL/: CMakeLists.txt  README.md  cuda_matmul.cu  example_solution.cpp  source.cpp
